classDiagram
    direction LR

    class auth_users {
        +uuid id
        +text email
    }

    class profiles {
        +uuid id
        +text email
        +text full_name
        +text role
        +text nik
        +text phone
        +uuid store_owner_user_id
        +text created_at
        +text updated_at
    }

    class app_profile {
        +text id
        +text store_name
        +text store_subtitle
        +text owner_name
        +text photo_path
        +uuid owner_user_id
    }

    class categories {
        +text id
        +text name
        +text description
        +uuid owner_user_id
    }

    class products {
        +text id
        +text category_id
        +text name
        +double sell_price
        +double cost_price
        +int stock_qty
        +int min_stock
        +text unit
        +text rack_location
        +text image_path
        +int is_active
        +int is_ready
        +uuid owner_user_id
    }

    class customers {
        +text id
        +text name
        +text phone
        +text address
        +text notes
        +int is_active
        +text created_at
        +uuid owner_user_id
    }

    class transactions {
        +text id
        +text transaction_code
        +text customer_id
        +text customer_name
        +double total_amount
        +text payment_method
        +double amount_paid
        +double change_amount
        +text notes
        +text created_at
        +uuid owner_user_id
        +uuid created_by_user_id
        +text created_by_name
    }

    class transaction_items {
        +bigint id
        +text transaction_id
        +text product_id
        +text product_name
        +int quantity
        +double sell_price
        +uuid owner_user_id
    }

    class debts {
        +text id
        +text transaction_id
        +text customer_id
        +text customer_name
        +double original_amount
        +double paid_amount
        +text due_date
        +text notes
        +text created_at
        +text updated_at
        +uuid owner_user_id
    }

    class debt_payments {
        +text id
        +text debt_id
        +text customer_id
        +double amount
        +text payment_method
        +text notes
        +text paid_at
        +uuid owner_user_id
    }

    class stock_movements {
        +text id
        +text product_id
        +text reference_name
        +double quantity
        +text type
        +text notes
        +text created_at
        +uuid owner_user_id
    }

    class operational_costs {
        +text id
        +text month_year
        +text cost_name
        +double amount
        +uuid owner_user_id
    }

    class pending_transactions {
        +text id
        +text customer_id
        +text customer_name
        +double total_amount
        +text notes
        +text created_at
        +uuid owner_user_id
    }

    class pending_transaction_items {
        +bigint id
        +text pending_transaction_id
        +text product_id
        +text product_name
        +int quantity
        +double sell_price
        +uuid owner_user_id
    }

    auth_users "1" --> "1" profiles : id
    profiles "1" --> "0..*" transactions : created_by_user_id

    categories "1" --> "0..*" products : category_id
    products "1" --> "0..*" stock_movements : product_id

    customers "1" --> "0..*" transactions : customer_id
    transactions "1" --> "1..*" transaction_items : transaction_id
    products "1" --> "0..*" transaction_items : product_id

    transactions "1" --> "0..1" debts : transaction_id
    customers "1" --> "0..*" debts : customer_id
    debts "1" --> "0..*" debt_payments : debt_id

    customers "1" --> "0..*" pending_transactions : customer_id
    pending_transactions "1" --> "1..*" pending_transaction_items : pending_transaction_id
    products "1" --> "0..*" pending_transaction_items : product_id
